--- a/main_bibliography.bib
+++ b/main_bibliography.bib
@@ -1,9 +1,16 @@
-@misc{robocup:online,
+@misc{HSR:online,
 author = {},
-title = {The RoboCup Japanese Regional Committee | ロボカップとは},
-howpublished = {\url{https://www.robocup.or.jp/robocup/}},
+title = {TOYOTA | トヨタ自動車、生活支援ロボットの実用化に向けて研究機関等と技術開発を推進するコミュニティを発足},
+howpublished = {\url{https://global.toyota/jp/detail/8709536}},
 month = {},
 year = {},
-note = {(Accessed on 12/29/2022)}
+note = {(Accessed on 1/15/2025)}
 }
-
+@misc{TIAGo:online,
+author = {},
+title = {PAL Robotics | MOBILE MANIPULATOR TIAGo},
+howpublished = {\url{https://pal-robotics.com/robot/tiago/}},
+month = {},
+year = {},
+note = {(Accessed on 1/15/2025)}
+}
