--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -3,13 +3,37 @@
 \thispagestyle{empty}
 %
 \begin{center}
-  \scalebox{1.5}{タイトル}\\
+  \scalebox{1.5}{オープンプラットフォームオフィスロボットの開発}\\
+  \scalebox{1.2}{-QDDモータを使用したロボットアームの設計と製作-}\\
 \end{center}
 \vspace{1.0zh}
 %
+　本論文では，オープンプラットフォームなオフィスロボット開発の第一段階として，ロボットアー
+ムの設計・製作について述べる．オフィスロボットの明確な定義は現状存在しないため，本研究では
+「オフィス環境で活動するモバイルマニピュレータロボット」と定義する．近年，PALロボティク
+ス社のTIAGo，トヨタのHSR，Pollenロボティクス社のReachyなど，様々なオフィスロボットが
+開発されているものの，ハードウェアのオープンプラットフォーム化が進んでいない点が課題とし
+て挙げられる．ハードウェアのオープンプラットフォームが普及することで，分野の活性化に寄与
+すると感がられる．そこで本研究では，オープンプラットフォームなオフィスロボットの開発を
+目指し，その第一段階として，ロボットアームの開発に取り組んだ．\\
+　オフィスロボット用ロボットアームの開発にあたっては，まずオフィス環境で求められる作業
+分析し，具体的な作業内容を明確化する必要があった．既存のオフィスロボット(前出のロボット
+を含む20台)を対象に動画及び文献調査を行い，80種類の作業を抽出し分析した．その結果，片
+付け作業が多く行われていることが判明し，本研究では「デスクの片付け」を作業タスクとして
+設定した．この作業は，多様な形状・大きさの物体を扱う必要があるため，ロボットアームには
+高い汎用性が求められる．また，人とロボットが協働するオフィス環境においては，安全性も重
+要な要素となる．これらの点を踏まえ，ロボットアームの要求仕様を策定し設計を行った．\\
+　開発したロボットアームは，全ての関節にQDDモータを採用している点が最大の特徴である．
+QDDモータの高いバックドライバビリティにより，外力が加わった際に関節が柔軟に動作し，衝撃
+を吸収することが可能となる．これにより，従来の減速機付きモータを採用したアームと比較し
+て，人や物体との衝突時の安全性が向上する．さらに，QDDモータの堅牢性を活かした設計によ
+り，アームはシンプルな構造で実現されている．具体的には，部品点数を少なく抑え，組み立て
+を容易にすることで，オープンプラットフォームとして重要な再現性と拡張性を高めている．
+これにより，設計データを公開することで，他の開発者による容易な複製と，必要に応じたカス
+タマイズが可能となる．本研究の成果は，将来的なオープンプラットフォームオフィスロボット
+の開発基盤となることが期待される．
 
-
-キーワード: 
+キーワード: オフィスロボット ロボットアーム QDDモータ オープンプラットフォーム
 %
 \newpage
 %%
