--- a/thesis.tex
+++ b/thesis.tex
@@ -13,7 +13,8 @@
 \thesis{修 士 論 文}
 \title{
   \centering
-    \scalebox{1.0}{タイトル}\\
+    \scalebox{1.0}{オープンプラットフォームオフィスロボットの開発}\\
+    \scalebox{1.0}{-QDDモータを使用したロボットアームの設計と製作-}\\
     \vspace{-0.3zh}
     \scalebox{0.7}{title}
     \vspace{-0.6zh}
@@ -25,8 +26,8 @@
 \vspace{-15.0zh}
 \teacher{林原 靖男 教授}
 \vspace{-15.0zh}
-\organization{千葉工業大学 先進工学部 未来ロボティクス学科}
-\author{学番 名前}
+\organization{千葉工業大学 先進工学研究科 未来ロボティクス専攻}
+\author{23S1008 川鍋清志郎}
 \vspace{-15zh}
 
 \renewcommand{\baselinestretch}{1.2}
@@ -41,6 +42,8 @@
 \mainmatter{}
 %
 \include{introduction/main}
+\include{second/main}
+\include{third/main}
 %ここにディレクトリのパスを追加していく
 %
 %% Back Matter
