--- a/main_bibliography.bib
+++ b/main_bibliography.bib
@@ -14,3 +14,11 @@ month = {},
 year = {},
 note = {(Accessed on 1/15/2025)}
 }
+@misc{humanArm:online,
+author = {},
+title = {人工知能研究センター | 人体寸法データベース1991-92-寸法項目一覧},
+howpublished = {\url{https://www.airc.aist.go.jp/dhrt/91-92/data/list.html}},
+month = {},
+year = {},
+note = {(Accessed on 1/15/2025)}
+}
