--- a/third/main.tex
+++ b/third/main.tex
@@ -1,5 +1,14 @@
 \chapter{設計}
 \label{chap:third}
 %
+本章では設計したロボットアームについて述べる．設計には，inventor2023を使用した．ロボットアームの構成は，6自由度アームと平行グリッパで構成されており，前章で述べた要求仕様を満たすように設計されている．アームの基本的な構成部品は，QDDモータ×6，アルミ板金部品×7，アルミフレーム×2，となっている．基本的な性能を示した後，肩部，肘部，手首部，のそれぞれの詳細設計について述べる．
+\begin{figure}[h]
+  \centering
+  \includegraphics[width=10cm]{images/arm_design.png}
+  \caption{アームの構成}
+  \label{fig:arm_design}
+\end{figure}
+
 \input{third/design}
+\input{third/lightweight}
 %
