--- a/frontmatter/abstract.tex
+++ b/frontmatter/abstract.tex
@@ -8,32 +8,10 @@
 \end{center}
 \vspace{1.0zh}
 %
-　本論文では，オープンプラットフォームなオフィスロボット開発の第一段階として，ロボットアー
-ムの設計・製作について述べる．オフィスロボットの明確な定義は現状存在しないため，本研究では
-「オフィス環境で活動するモバイルマニピュレータロボット」と定義する．近年，PALロボティク
-ス社のTIAGo，トヨタのHSR，Pollenロボティクス社のReachyなど，様々なオフィスロボットが
-開発されているものの，ハードウェアのオープンプラットフォーム化が進んでいない点が課題とし
-て挙げられる．ハードウェアのオープンプラットフォームが普及することで，分野の活性化に寄与
-すると感がられる．そこで本研究では，オープンプラットフォームなオフィスロボットの開発を
-目指し，その第一段階として，ロボットアームの開発に取り組んだ．\\
-　オフィスロボット用ロボットアームの開発にあたっては，まずオフィス環境で求められる作業
-分析し，具体的な作業内容を明確化する必要があった．既存のオフィスロボット(前出のロボット
-を含む20台)を対象に動画及び文献調査を行い，80種類の作業を抽出し分析した．その結果，片
-付け作業が多く行われていることが判明し，本研究では「デスクの片付け」を作業タスクとして
-設定した．この作業は，多様な形状・大きさの物体を扱う必要があるため，ロボットアームには
-高い汎用性が求められる．また，人とロボットが協働するオフィス環境においては，安全性も重
-要な要素となる．これらの点を踏まえ，ロボットアームの要求仕様を策定し設計を行った．\\
-　開発したロボットアームは，全ての関節にQDDモータを採用している点が最大の特徴である．
-QDDモータの高いバックドライバビリティにより，外力が加わった際に関節が柔軟に動作し，衝撃
-を吸収することが可能となる．これにより，従来の減速機付きモータを採用したアームと比較し
-て，人や物体との衝突時の安全性が向上する．さらに，QDDモータの堅牢性を活かした設計によ
-り，アームはシンプルな構造で実現されている．具体的には，部品点数を少なく抑え，組み立て
-を容易にすることで，オープンプラットフォームとして重要な再現性と拡張性を高めている．
-これにより，設計データを公開することで，他の開発者による容易な複製と，必要に応じたカス
-タマイズが可能となる．本研究の成果は，将来的なオープンプラットフォームオフィスロボット
-の開発基盤となることが期待される．
+本論文は，オープンプラットフォームオフィスロボットの開発を目的として，ロボットアームの設計と製作について述べる．オフィスロボットは，PAL Robotics社のTIAGoやトヨタのHSRのように多くの事例が存在するが，ハードウェアのオープンプラットフォーム化が進んでいないことが課題である．オープンプラットフォーム化により，設計データの公開を通じて研究開発の活性化が期待される．本研究では，オフィス環境におけるロボットアームの作業として「机の片付け」を設定し，その要求仕様を策定した．分析の結果，ロボットアームには高い汎用性と安全性が求められることが明らかとなった．これに基づき，すべての関節にQDDモータを採用したロボットアームを設計した．QDDモータは高いバックドライバビリティを有し，衝突時の柔軟な応答を可能にすることで安全性を向上させる特性を持つ．さらに，部品点数を減らし，組み立てを容易にする設計を行ったことで，オープンプラットフォームとしての再現性と拡張性を高めた．製作したロボットアームは，要求仕様を満たすとともに，設計データを公開することで他の研究者や開発者による再利用や改良を可能にする．本研究は，オープンプラットフォームオフィスロボットの基盤となることを目指しており，QDDモータの新たな応用例としても意義がある．
 
-キーワード: オフィスロボット ロボットアーム QDDモータ オープンプラットフォーム
+キーワード: オフィスロボット，ロボットアーム，QDDモータ，オープンプラットフォーム
+
 %
 \newpage
 %%
