--- a/main_bibliography.bib
+++ b/main_bibliography.bib
@@ -14,10 +14,46 @@ month = {},
 year = {},
 note = {(Accessed on 1/15/2025)}
 }
-@misc{humanArm:online,
+@misc{humanarm:online,
 author = {},
 title = {人工知能研究センター | 人体寸法データベース1991-92-寸法項目一覧},
 howpublished = {\url{https://www.airc.aist.go.jp/dhrt/91-92/data/list.html}},
+month = {},
+year = {},
+note = {(Accessed on 1/15/2025)}
+}
+@misc{backdrive:online,
+author = {日本機械学会},
+title = {機械工学事典 | バックドライバビリティ},
+howpublished = {\url{https://www.jsme.or.jp/jsme-medwiki/doku.php?id=14:1010220}},
+month = {},
+year = {},
+note = {(Accessed on 1/15/2025)}
+}
+@misc{gealy2019quasidirectdrivelowcostcompliant,
+      title={Quasi-Direct Drive for Low-Cost Compliant Robotic Manipulation}, 
+      author={David V. Gealy and Stephen McKinley and Brent Yi and Philipp Wu and Phillip R. Downey and Greg Balke and Allan Zhao and Menglong Guo and Rachel Thomasson and Anthony Sinclair and Peter Cuellar and Zoe McCarthy and Pieter Abbeel},
+      year={2019},
+      eprint={1904.03815},
+      archivePrefix={arXiv},
+      primaryClass={cs.RO},
+      url={https://arxiv.org/abs/1904.03815}, 
+}
+@INPROCEEDINGS{10106520,
+  author={Zhao, Yuntian and Huang, Binxin and Lin, Shiyuan and Zhu, Zheng and Jia, Zhenzhong},
+  booktitle={2023 9th International Conference on Mechatronics and Robotics Engineering (ICMRE)}, 
+  title={A Light-Weight Quasi-Direct Drive Collaborative Robot Arm}, 
+  year={2023},
+  volume={},
+  number={},
+  pages={24-29},
+  keywords={Mechatronics;Service robots;Dynamics;Propioception;Production;Control systems;Impedance;robot arm;manipulation;proprioceptive actuation;mechatronics},
+  doi={10.1109/ICMRE56789.2023.10106520}
+}
+@misc{Meviy:online,
+author = {},
+title = {Meviy(MISUMI)},
+howpublished = {\url{https://meviy.misumi-ec.com/worldwide/}},
 month = {},
 year = {},
 note = {(Accessed on 1/15/2025)}
