--- a/second/spec.tex
+++ b/second/spec.tex
@@ -1,35 +1,22 @@
 %!TEX root = ../thesis.tex
 \section{要求仕様}
-前項で設定した作業と既存のオフィスロボットの調査を基に，要求仕様を決定する．以下に決定した要求仕様とその理由を示す．
-\begin{itemize}
-  \item アームリーチ70cm程度
-  \item 軽量化
-  \item 6自由度
-  \begin{itemize}
-    \item 肩2軸（ヨー，ピッチ）
-    \item 肘1軸（ロール）
-    \item 手首3軸（ヨー，ピッチ，ロール）
-  \end{itemize}
-  \item 可搬重量500g以上
-  \item 平行グリッパ
-  \item QDDモータを使用
-\end{itemize}
-\subsection{アームのサイズ}
-ロボットアームのサイズは，オフィス環境で活動するのに適したサイズが好ましい．既存のオフィスロボットのアームリーチは，平均約70cm程度である．また，前項で設定した作業より，対象物の設置位置と箱の設置位置は50cm以内の位置であるため，アームリーチ70cm程度あれば作業の遂行も可能である．
-\subsection{アーム重量}
-既存のオフィスロボットのアームの重量は調査してもわからなかったが，将来的に台車ロボットに搭載することや，双腕ロボットにすることを考えると，軽量であることが望ましい．また，軽量化することで安全性にも寄与すると考えられる．
-\subsection{アームの自由度}
-自由度の決定は既存のオフィスロボットを参考に行う．既存のオフィスロボットの自由度を調査した結果を示す．7自由度と6自由度のロボットがほとんどである．6自由度に比べ7自由度は柔軟な操作が可能であるが，アーム重量が増加し，コストも高くなる．そのため，6自由度のアームが望ましい．この際，軸配置についても既存のロボットアームを参考に，肩2軸（ヨー，ピッチ），肘1軸（ロール），手首3軸（ヨー，ピッチ，ロール）とする．
+本研究では，QDD（Quasi-Direct Drive）モータを搭載したロボットアームを開発し，オフィス環境での作業遂行を目指す．そのため，以下の要求仕様を策定する．これらの仕様は，設定した作業内容や既存のオフィスロボットの調査結果を基に決定したものである．特に，QDDモータを採用することで，柔軟性と安全性を高める点に注力している．
+
+\subsection{サイズと作業範囲}
+ロボットアームのサイズは，机上での片付け作業を想定し，50cm以内の範囲にある対象物を扱えるよう設計する．これを実現するため，アームのリーチは70cm程度とする．この範囲は既存のロボットアームの調査結果を基準として設定したものであり，オフィス環境における机上作業の多くをカバーできる．
+
+\subsection{自由度}
+自由度の決定は既存のオフィスロボットを参考に行う．既存のオフィスロボットの自由度を調査した結果を示す．7自由度と6自由度のロボットがほとんどである．6自由度に比べ7自由度は柔軟な操作が可能であるが，アーム重量が増加し，コストも高くなるため，6自由度を採用する．軸配置についても既存のロボットアームを参考に，肩2軸（ヨー，ピッチ），肘1軸（ロール），手首3軸（ヨー，ピッチ，ロール）とする．
 
 \begin{figure}[h]
   \centering
   \includegraphics[width=10cm]{images/armDof.pdf}
-  \caption{既存のオフィスロボットの自由度}
+  \caption{Existing office robot arm DoF}
   \label{fig:armDof}
 \end{figure}
 
 \subsection{可搬重量}
-設定した作業では，500g以下の対象物を把持する．そのため，アームの可搬重量は500g以上であることが望ましい．
+オフィス環境での作業では軽量な物体を扱うことが多く，設定した作業では500g以下の物体を対象とした．そのため，アームの可搬重量は500g以上の可搬重量を確保する．これにより，オフィス作業で想定される軽量物の取り扱いを十分にカバーできる．
 \subsection{エンドエフェクタ}
 既存のオフィスロボットのエンドエフェクタは，Mobile ALOHAに搭載されているロボットアーム(\ref{fig:alohaarm}に示す)のような平行グリッパが多く，様々な形状の物体を把持していることが確認できた．そのため，本研究で開発するアームにも平行グリッパを搭載する．
 
@@ -41,5 +28,32 @@
 \end{figure}
 
 \subsection{安全性}
-オフィス環境には多くの人がいるため、ロボットアームが人に接触する可能性があり、安全性が重要である。既存のオフィスロボットで使用されているアクチュエータは、高減速比でバックドライバビリティが低いものが多い。そのため、低減速比のQDDモータを使用することで、バックドライバビリティを高め、衝突時に柔軟な関節を実現することができる。そもそも，利用者や近くの人間に危害を加えないことが重要であり，QDDモータを使用する以外にも対策を講じる必要がある．
+人や精密機器があるオフィス環境では、ロボットがそれらの危害を加えないことが最も重要である．接触してしまっても，ロボットアームの関節が柔軟に駆動すれば被害は最小限に抑えることができると考られるため，QDDモータを使用する．QDDモータは低減速比でバックドライバビリティが高いため，人や機器との衝撃を最小限に抑え，オフィス環境での安全性に寄与する．
+\subsection{オープンプラットフォーム}
+開発するロボットアームはオープンプラットフォームオフィスロボットの一部機能であるため，オープンプラットフォームであることが望ましい．オープンプラットフォームとして，以下の項目を満たすことが望ましい．
+\begin{itemize}
+  \item ハードウェアの設計図の公開
+  \item 部品リストの公開
+  \item 製作動画の公開
+\end{itemize}
+
+\section{要求仕様のまとめ}
+以上の項目をまとめた要求仕様を表\ref{tab:armSpecs}に示す．これらの項目を満たしたロボットアームを設計する．
+
+\begin{table}
+  \centering
+  \begin{tabular}{l|l}
+    \hline
+    \multicolumn{1}{c|}{\textbf{項目}} & \multicolumn{1}{c}{\textbf{仕様}} \\ \hline
+    アームリーチ                           & 約70cm                           \\
+    自由度                              & 6自由度                            \\
+    可搬重量                             & 500g以上                          \\
+    エンドエフェクタ                         & 平行グリッパ                          \\
+    安全性                              & QDDモータを使用した柔軟な関節                \\
+    オープンプラットフォーム性                    & 設計データおよび製作ノウハウの公開               \\ \hline
+  \end{tabular}
+  \caption{Required specifications for robot arm}
+  \label{tab:armSpecs}
+\end{table}
+\clearpage
 \newpage
