--- a/thesis.tex
+++ b/thesis.tex
@@ -44,6 +44,8 @@
 \include{introduction/main}
 \include{second/main}
 \include{third/main}
+\include{production/main}
+\include{conclusion/main}
 %ここにディレクトリのパスを追加していく
 %
 %% Back Matter
