--- a/third/design.tex
+++ b/third/design.tex
@@ -2,19 +2,19 @@
 \section{基本的な性能}
 設計したロボットアームの基本的な性能を述べる．
 \subsection{アームサイズ}
-図\ref{fig:link_length}にロボットアームのアームリーチとリンク長を示す．人間の腕の長さの比\cite{humanArm}を参考に，肩から肘までは290㎜，肘から手首までは220㎜とした．アームリーチは660㎜であり，要求仕様の700㎜程度を満たしている．図\ref{fig:arm_size}にアームサイズを示す．比較のため，机とボトルを模したものを配置している．
+図\ref{fig:link_length}にロボットアームのアームリーチとリンク長を示す．人間の腕の長さの比\cite{humanarm:online}を参考に，肩から肘までは290㎜，肘から手首までは220㎜とした．アームリーチは660㎜であり，要求仕様の700㎜程度を満たしている．図\ref{fig:arm_size}にアームサイズを示す．比較のため，机とボトルを模したものを配置している．
 
 \begin{figure}[htbp]
   \centering
   \includegraphics[width=10cm]{images/link_length.png}
-  \caption{アームリーチとリンク長}
+  \caption{Arm reach and link length}
   \label{fig:link_length}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
   \includegraphics[width=10cm]{images/hikaku.png}
-  \caption{アームサイズ}
+  \caption{Arm size}
   \label{fig:arm_size}
 \end{figure}
 
@@ -26,14 +26,14 @@
 \begin{figure}[htbp]
   \centering
   \includegraphics[width=10cm]{images/design/arm_short.png}
-  \caption{最小可動範囲}
+  \caption{Minimum range of motion}
   \label{fig:arm_short}
 \end{figure}
 
 \begin{figure}[htbp]
   \centering
   \includegraphics[width=10cm]{images/design/arm_long.png}
-  \caption{最大可動範囲}
+  \caption{Minimum range of motion}
   \label{fig:arm_long}
 \end{figure}
 
@@ -43,28 +43,28 @@
 \begin{figure}[h]
   \centering
   \includegraphics[width=10cm]{images/design/migitika.png}
-  \caption{右近くへ伸ばした様子}
+  \caption{Stretched out to the right}
   \label{fig:move1}
 \end{figure}
 
 \begin{figure}[h]
   \centering
   \includegraphics[width=10cm]{images/design/migioku.png}
-  \caption{右遠くへ伸ばした様子}
+  \caption{Stretched out to the right}
   \label{fig:move2}
 \end{figure}
 
 \begin{figure}[h]
   \centering
   \includegraphics[width=8cm]{images/design/hidaritika.png}
-  \caption{左近くへ伸ばした様子}
+  \caption{Stretched out to the left}
   \label{fig:move3}
 \end{figure}
 
 \begin{figure}[h]
   \centering
   \includegraphics[width=10cm]{images/design/hidarioku.png}
-  \caption{左遠くへ伸ばした様子}
+  \caption{Stretched out to the left}
   \label{fig:move4}
 \end{figure}
 \clearpage
@@ -79,7 +79,7 @@
 \begin{figure}[h]
   \centering
   \includegraphics[width=10cm]{images/design/CoG.png}
-  \caption{アームの重心}
+  \caption{Center of gravity}
   \label{fig:CoG}
 \end{figure}
 
