--- a/third/main.tex
+++ b/third/main.tex
@@ -1,14 +1,16 @@
 \chapter{設計}
 \label{chap:third}
 %
-本章では設計したロボットアームについて述べる．設計には，inventor2023を使用した．ロボットアームの構成は，6自由度アームと平行グリッパで構成されており，前章で述べた要求仕様を満たすように設計されている．アームの基本的な構成部品は，QDDモータ×6，アルミ板金部品×7，アルミフレーム×2，となっている．基本的な性能を示した後，肩部，肘部，手首部，のそれぞれの詳細設計について述べる．
+本章では，使用するQDDモータの説明とロボットアームの基本的な性能や，要求仕様を満たすための設計について述べる．設計には，Autodesk Inventor 2023を使用した．ロボットアームは，6自由度のアームと1軸駆動の平行グリッパで構成されており，前章で述べた要求仕様を満たすように設計されている．アームの主要構成部品は，QDDモータ6基，アルミ板金部品7点，アルミフレーム2本，平行グリッパである．
 \begin{figure}[h]
   \centering
   \includegraphics[width=10cm]{images/arm_design.png}
-  \caption{アームの構成}
+  \caption{Robot arm configuration}
   \label{fig:arm_design}
 \end{figure}
 
+\input{third/QDDmotor}
 \input{third/design}
-\input{third/lightweight}
+\input{third/structural_analysis}
+\input{third/hand}
 %
