--- a/introduction/main.tex
+++ b/introduction/main.tex
@@ -4,4 +4,8 @@
 %\input{introduction/preface}
 %
 \input{introduction/background}
+\input{introduction/qddmotor}
+\input{introduction/research}
+\input{introduction/purpose}
+
 %
