タイトルと著者情報を更新し、ロボットアームの設計に関する説明を修正

--- a/thesis.tex
+++ b/thesis.tex
@@ -14,21 +14,28 @@
 \title{
   \centering
     \scalebox{1.0}{オープンプラットフォームオフィスロボットの開発}\\
-    \scalebox{1.0}{-QDDモータを使用したロボットアームの設計と製作-}\\
-    \vspace{-0.3zh}
-    \scalebox{0.7}{title}
-    \vspace{-0.6zh}
+    \vspace{-0.5zh}
+    \scalebox{0.9}{-QDDモータを使用した}\\
+    \vspace{-0.7zh}
+    \scalebox{0.9}{ロボットアームのメカニズムの設計と製作-}\\
+    \vspace{0.4zh}
+    \scalebox{0.8}{Development of Open Platform Office Robot}\\
+    \vspace{-1.0zh}
+    \scalebox{0.7}{-Design and Construction of a Robot Arm Mechanism}\\
+    \vspace{-1.0zh}
+    \scalebox{0.7}{using QDD Motor-}
+    \vspace{-3zh}
 }
 \setlength{\textwidth}{\fullwidth}
 \setlength{\evensidemargin}{\oddsidemargin}
 
 \date{\today}
-\vspace{-15.0zh}
+\vspace{-10.0zh}
 \teacher{林原 靖男 教授}
-\vspace{-15.0zh}
+\vspace{-10.0zh}
 \organization{千葉工業大学 先進工学研究科 未来ロボティクス専攻}
 \author{23S1008 川鍋清志郎}
-\vspace{-15zh}
+\vspace{-10zh}
 
 \renewcommand{\baselinestretch}{1.2}
 \begin{document}
@@ -41,11 +48,11 @@
 %% Main Matter
 \mainmatter{}
 %
-\include{introduction/main}
-\include{second/main}
-\include{third/main}
-\include{production/main}
-\include{conclusion/main}
+%\include{introduction/main}
+%\include{second/main}
+%\include{third/main}
+%\include{production/main}
+%\include{conclusion/main}
 %ここにディレクトリのパスを追加していく
 %
 %% Back Matter
