新しいページを追加し、OPLファイルをインポート

--- a/third/main.tex
+++ b/third/main.tex
@@ -8,7 +8,8 @@
   \caption{Robot arm configuration}
   \label{fig:arm_design}
 \end{figure}
-
+\newpage
+\input{third/OPL}
 \input{third/QDDmotor}
 \input{third/design}
 \input{third/structural_analysis}
