文献リストに新しい参考文献を追加し、既存の文献のキーを簡略化

--- a/main_bibliography.bib
+++ b/main_bibliography.bib
@@ -30,7 +30,7 @@ month = {},
 year = {},
 note = {(Accessed on 1/15/2025)}
 }
-@misc{gealy2019quasidirectdrivelowcostcompliant,
+@misc{gealy2019,
       title={Quasi-Direct Drive for Low-Cost Compliant Robotic Manipulation}, 
       author={David V. Gealy and Stephen McKinley and Brent Yi and Philipp Wu and Phillip R. Downey and Greg Balke and Allan Zhao and Menglong Guo and Rachel Thomasson and Anthony Sinclair and Peter Cuellar and Zoe McCarthy and Pieter Abbeel},
       year={2019},
@@ -54,6 +54,66 @@ note = {(Accessed on 1/15/2025)}
 author = {},
 title = {Meviy(MISUMI)},
 howpublished = {\url{https://meviy.misumi-ec.com/worldwide/}},
+month = {},
+year = {},
+note = {(Accessed on 1/15/2025)}
+}
+@misc{AYUDA:online,
+author = {},
+title = {株式会社CIJ | サービスロボット「AYUDA」シリーズ},
+howpublished = {\url{https://ayuda.cij.co.jp/service/product/ayuda/index.html#ayuda}},
+month = {},
+year = {},
+note = {(Accessed on 1/15/2025)}
+}
+@misc{SQ-2:online,
+author = {},
+title = {SEQSENSE | 自律移動型警備ロボット SQ-2},
+howpublished = {\url{https://www.seqsense.com/product}},
+month = {},
+year = {},
+note = {(Accessed on 1/15/2025)}
+}
+@misc{KLEENBOT:online,
+author = {},
+title = {KEENON | KLEENBOT C30},
+howpublished = {\url{https://www.keenon.com/jp/product/C30/index.html?gad_source=1&gclid=CjwKCAiAm-67BhBlEiwAEVftNqiRWgt7AQPRk51y_rXQkRHg-02tPQOuCmrhPOVeNcSkQ04SX8-ocRoC3SEQAvD_BwE}},
+month = {},
+year = {},
+note = {(Accessed on 1/15/2025)}
+}
+@misc{BellaBot:online,
+author = {},
+title = {ELMO | BellaBot},
+howpublished = {\url{https://www.elmo.co.jp/product/robot/bellabot/}},
+month = {},
+year = {},
+note = {(Accessed on 1/15/2025)}
+}
+@article{古賀達也201937_707,
+  title={IoTの側面から見た，モバイルロボット・モバイルマニピュレータの現状と今後の展望},
+  author={古賀 達也 and 井尻 善久},
+  journal={日本ロボット学会誌},
+  volume={37},
+  number={8},
+  pages={707-710},
+  year={2019},
+  doi={10.7210/jrsj.37.707}
+}
+@article{飯塚浩太2021,
+  title={準DDモータと重力補償機構による柔軟ロボットアームの特性評価},
+  author={飯塚 浩太 and 鈴木 諒太郎 and 武居 直行 and 徳永 晋也 and 深澤 俊樹 and 山本 章},
+  journal={ロボティクス・メカトロニクス講演会講演概要集},
+  volume={2021},
+  number={ },
+  pages={2P3-I02},
+  year={2021},
+  doi={10.1299/jsmermd.2021.2P3-I02}
+}
+@misc{Blue:online,
+author = {},
+title = {Quasi-Direct Drive for Low-Cost Compliant Robotic Manipulation},
+howpublished = {\url{https://berkeleyopenarms.github.io/}},
 month = {},
 year = {},
 note = {(Accessed on 1/15/2025)}
