不要なセクションのインポートをコメントアウト

--- a/introduction/main.tex
+++ b/introduction/main.tex
@@ -4,8 +4,7 @@
 %\input{introduction/preface}
 %
 \input{introduction/background}
-\input{introduction/qddmotor}
-\input{introduction/research}
-\input{introduction/purpose}
+%\input{introduction/qddmotor}
+%\input{introduction/purpose}
 
 %
