背景セクションの内容を更新し、オフィスロボットの定義とオープンプラットフォームの重要性を強調

--- a/introduction/background.tex
+++ b/introduction/background.tex
@@ -1,9 +1,9 @@
 %!TEX root = ../thesis.tex
 
 \section{背景}
-近年，人手不足を背景にサービスロボットの需要が高まり，オフィスロボットの開発が活発化している．PAL Robotics社のTIAGo（図\ref{fig:TIAGo}）やトヨタ自動車のHSR（図\ref{fig:HSR}）など，様々なオフィスロボットが開発されているが，設計データを公開しているロボットが少なく，ユーザによる改良や研究開発への新規参入が困難となっている．また，市販のオフィスロボットは，高度なセンサ構成などのため，高価格である場合が多く，コスト面で大きな負担となる．そのため，研究開発用途に適した，容易に利用・改変可能なオープンプラットフォームなオフィスロボットは依然として不足しているのが現状である．
+近年，人手不足を背景にサービスロボットの需要が高まり，日常生活の中で目にする機会が増えている．現在，実用化に至っているサービスロボットは，館内の案内\cite{AYUDA:online}，警備\cite{SQ-2:online}，掃除\cite{KLEENBOT:online}，配膳\cite{BellaBot:online}，など，1つの作業に特化したロボットだが，複数作業が行える汎用サービスロボットであるモバイルマニピュレータロボットの開発が進められている．モバイルマニピュレータロボットは，自律移動ロボットにマニピュレータを搭載したロボットで，PAL Robotics社のTIAGo(図\ref{fig:TIAGo}参照) やトヨタ自動車のHSR(図\ref{fig:HSR}参照) などがある．これらのロボットは人に代わって様々な作業ができる汎用的なサービスロボットとして実用化が期待されている\cite{古賀達也201937_707}．本研究では，オフィス環境で活動するモバイルマニピュレータをオフィスロボットと定義して，話を進める．
 
-このような状況に対し，オープンプラットフォームハードウェアの成功事例として，i-Cartシリーズが挙げられる．自律移動ロボットであるi-Cart miniとi-Cart middleは，設計データ，部品リスト，組み立て図を公開しており，誰もが容易に複製・改良できる．i-Cartをベースとした様々なロボットが開発され，自律移動ロボット開発の活性化に大きく貢献している．これは，i-Cartシリーズの登場により，自律移動ロボット開発への参入障壁が大幅に低下したことを示唆している．そのため，オープンプラットフォームオフィスロボットを開発し，研究開発への参入障壁を下げることを目指す．
+オフィスロボットは様々な企業や研究室で開発が進められているが，設計データを公開しているものが少なく，標準的なプラットフォームが不足している．ロボットのオープンプラットフォームは，利用者によるハードウェアの改良などが容易にできるだけでなく，技術促進の場としても優れている．例えば，自律移動ロボットのオープンソースハードウェアであるi-Cartシリーズは，本研究室で開発されているorne-boxを始めとした様々なロボットのベースとして活用されている．ハードウェアプラットフォームがあると，ハードウェアを開発する手間が省け，ソフトウェア開発に注力できる．様々な開発者の知識や成果を共有し，技術の発展を加速させることに寄与すると考え，本研究ではオープンプラットフォームオフィスロボットの開発を行う．本項では，オフィスロボットのアームに着目し，設計と製作を行う．
 
 \begin{figure}[h]
   \centering
@@ -18,20 +18,4 @@
   \label{fig:HSR}
 \end{figure}
 
-\begin{table}[h]
-  \centering
-  \caption{Comparison of actuators used in existing office robot arms and QDD motors}
-  \begin{tabular}{lccc}
-  \hline
-            & \begin{tabular}[c]{@{}c@{}}Dynamixel \\ MX-106T\end{tabular} & \begin{tabular}[c]{@{}c@{}}KONDO\\ B3M-CS-1170-A\end{tabular} & \begin{tabular}[c]{@{}c@{}}Steadywin\\ GIM8108-8\end{tabular} \\ \hline
-  ストールトルク[Nm]   & 8.0                                                          & 7.6                                                           & 22                                                            \\
-  無負荷回転数[rpm]    & 41                                                           & 46                                                            & 110                                                           \\
-  減速比       & 225 : 1                                                      & 362.88 : 1                                                    & 8 : 1                                                         \\
-  重量[g]        & 153                                                          & 105                                                           & 396                                                           \\
-  許容ラジアル荷重[N]  & 40                                                           & -                                                             & 900                                                           \\
-  許容アキシアル荷重[N] & 20                                                           & -                                                             & 800                                                           \\ \hline
-  \end{tabular}
-  \label{table:motor}
-\end{table}
-\clearpage
 \newpage
