イントロダクションセクションにqddmotorと目的の入力を追加

--- a/introduction/main.tex
+++ b/introduction/main.tex
@@ -4,7 +4,7 @@
 %\input{introduction/preface}
 %
 \input{introduction/background}
-%\input{introduction/qddmotor}
-%\input{introduction/purpose}
+\input{introduction/qddmotor}
+\input{introduction/purpose}
 
 %
