作業設定と調査セクションを追加し、オフィスロボットの要求仕様を明確化

--- a/second/task.tex
+++ b/second/task.tex
@@ -1,18 +1,29 @@
 %!TEX root = ../thesis.tex
-本章では，オープンプラットフォームのロボットアームの要求仕様を決定していく．行わせる作業を設定し，設定した作業と既存のオフィスロボットの調査を基に要求仕様をまとめていく．
-\section{作業の設定}
-本研究では，オフィス環境におけるロボットアームの作業として「机の片づけ」を設定した．オフィス環境で想定される作業は多岐にわたるが，基本的には台車移動とピック＆プレイス作業を組み合わせたものが大半を占める．これは既存のオフィスロボットがどのような作業を対象にしているかを調査した結果である．文献や動画から78の作業内容を抽出し，そのうち66件（約85％）が台車移動とピック＆プレイス作業を組み合わせたものであった．本研究で開発するロボットアームは，将来的にオフィスロボットの標準プラットフォームとなることを期待しているため，最初のステップとして「机の片づけ作業」を設定した．図\ref{fig:range}は，机上における対象物と箱の設置位置を示している．対象物と箱は机の縁から50cm以内の範囲に設置する．また，対象物については既存のオフィスロボットが扱っている物体を調査した結果に基づいて選定した．調査結果を図\ref{fig:handget}に示す．最も多く確認されたのは衣類などの柔軟な物体であり，次いでボトルなどの円柱型物体が多かった．今回はこれらの中からボトルとタオルを対象物として設定した．調査では，重量の大きい物体を把持する作業は確認されず，多くの作業が軽量な物体を対象としていた．これを踏まえ，本研究における対象物の重量を500g以下と設定する．片付け用の箱のサイズは，高さ20cmとする．
+前提として，開発するロボットアームは，オフィスロボットとして適している必要がある．オフィスロボットとして適した仕様を決定するにあたり，本研究では以下の手順を踏んだ．
+\begin{enumerate}
+  \item 既存オフィスロボットが対象としている作業の調査
+  \item 行う作業の決定
+  \item 既存オフィスロボットのロボットアームのメカニズム調査
+  \item 仕様の決定
+\end{enumerate}
+まず，「調査した全てのオフィスロボットが行える作業」を基準に作業を決定し，その作業から求められる項目を，ロボットアーム調査の結果を踏まえて整理した．本章では，本研究で対象とする作業の決定過程と，要求仕様の決定について述べる．
+
+\section{作業調査}
+開発するロボットアームが対象とする作業を決定するため，既存のオフィスロボットが対象としている作業を調査した．動画や文献をから合計77件の作業事例を抽出したところ，約61\%が台車移動とピック\&プレイスを組み合わせた作業であった．これは，部屋の片づけや荷物の運搬などが代表例である．それ他の作業としては，ドアの開閉，ボタンの押下，フロアの巡回，などが挙げられた．以上の結果から，現在オフィスロボットが対象としている作業の多くは，物体を把持して移動させる作業であると考えられる．本研究で開発するロボットアームは，将来的にオフィスロボットの標準プラットフォームとして活用されることを目指している．その第一歩として，本研究では「机の片づけ作業」を対象とした．
+
+\section{机の片づけ作業}
+ここでは，「机の片づけ作業」の詳細を述べる．机の片づけ作業は，机の上に散らばっている物体を事前に設置した箱の中へ移動させる作業である．以下に，具体的に使用する物体の種類や重量，設置位置について以下に述べる．
+\subsection{机の上に置く物体}
+机の上に置く物体，すなわちロボットが把持対象とする物体は，既存のオフィスロボットが頻繁に把持していた対象を調査したうえで設定した．図\ref{fig:handget}に示すように，最も多かったのは服やタオルなどの衣類で，次にペットボトルや缶ジュースなどの筒状物，お菓子の箱や 200ml 程度のパックジュースなどの箱状物，さらにペンなどの棒状物や雑誌などの薄型物が続いた．以上の結果に基づき，本研究では作業対象としてタオル，缶ジュース，パックジュースの 3 種類を採用する．
 \begin{figure}[h]
   \centering
-  \includegraphics[width=10cm]{images/range.png}
-  \caption{Range to place objects and boxes}
-  \label{fig:range}
-\end{figure}
-\begin{figure}[h]
-  \centering
-  \includegraphics[width=10cm]{images/handget.pdf}
-  \caption{Survey results of objects handled by existing office robots}
+  \includegraphics[width=10cm]{images/2syou/handget.png}
+  \caption{Survey results of objects grasped by office robots}
   \label{fig:handget}
 \end{figure}
 \clearpage
+\subsection{物体の重量}
+調査の中では，人が片手で持てないサイズや重量の大きい物体を扱う事例は見られなかった．そこで，把持対象物の重量は 500g 以下と設定した．
+\subsection{物体の設置位置}
+次節で詳述するように，既存のオフィスロボットのアームリーチで最小の値は，Hello Robot 社が開発している Stretch 3 の約 0.51m であった．したがって，把持対象物と箱の設置位置は，机の縁から0.5m以内の範囲に設置することとする．
 \newpage
