文献リストにTIAGoの操作に関する動画を追加

--- a/main_bibliography.bib
+++ b/main_bibliography.bib
@@ -118,3 +118,11 @@ month = {},
 year = {},
 note = {(Accessed on 1/15/2025)}
 }
+@misc{TIAGo-movie:online,
+author = {},
+title = {TIAGo | Manipulation Compilation},
+howpublished = {\url{https://www.youtube.com/watch?v=Bmk4EASGTJI}},
+month = {},
+year = {},
+note = {(Accessed on 1/15/2025)}
+}
